# algotrader

./: .gitignore  README.md  documentation.md  hello.py  modular_info.md  nextstep.md  plan.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
runtime_data/data/: spy_daily.csv  vix_daily.csv
runtime_data/models/latest/: fold_001.pkl  fold_002.pkl  fold_003.pkl  fold_004.pkl  fold_004_calibrator.pkl  fold_005.pkl  fold_006.pkl  fold_007.pkl  fold_008.pkl  fold_009.pkl  fold_010.pkl  fold_011.pkl  fold_012.pkl  fold_013.pkl  fold_014.pkl  fold_015.pkl  fold_016.pkl  fold_017.pkl  fold_018.pkl  fold_019.pkl  fold_020.pkl  fold_021.pkl  fold_022.pkl  fold_023.pkl  fold_024.pkl  fold_025.pkl  fold_026.pkl  fold_027.pkl  fold_028.pkl  fold_029.pkl  fold_030.pkl  fold_031.pkl  fold_032.pkl  fold_033.pkl  fold_034.pkl  fold_035.pkl  fold_036.pkl  fold_037.pkl  fold_038.pkl  fold_039.pkl  (+93 more)
runtime_data/reports/: fold_summaries.csv  summary.json  test_predictions.csv
runtime_data/research/: ablation_results.csv  label_sweep_results.csv
src/algotrader/: __init__.py  ablation.py  experiment_registry.py  holdout.py  metrics.py  pipeline.py  profiles.py  reporting.py  settings.py  specs.py  sweep.py  thresholds.py
src/algotrader/backtest/: __init__.py  engine.py
src/algotrader/features/: __init__.py  technicals.py
src/algotrader/ingestion/: __init__.py  alpha_vantage.py  storage.py  yfinance_client.py
src/algotrader/labels/: __init__.py  triple_barrier.py
src/algotrader/sentiment/: __init__.py  aggregate.py  cli.py  dedup.py  finbert.py  news.py
tests/: test_ablation.py  test_backtest.py  test_dataset.py  test_experiment.py  test_experiment_registry.py  test_holdout.py  test_ingestion.py  test_pipeline.py  test_profiles.py  test_reporting.py  test_sentiment.py  test_specs.py  test_sweep.py  test_technicals.py  test_thresholds.py  test_triple_barrier.py  test_walk_forward.py
(+7 files in other folders)
